# llmkit

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICK_START.md  README.md  RELEASE_NOTES.md  publish.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  tests.yml
docs/: CODE_QUALITY_ANALYSIS.md  DATA_FLOW_AND_BOTTLENECKS.md  DEPLOYMENT.md  PERFORMANCE_OPTIMIZATION.md  README.md
examples/: advanced_search_demo.py  basic_usage.py  callbacks_demo.py  check_providers.py  embeddings_demo.py  improved_api_demo.py  model_params.py  phase5_demo.py  rag_chain_demo.py  rag_debugging_demo.py  rag_demo.py  state_graph_demo.py  test_import.py  vector_store_selection_demo.py  vector_stores_demo.py
src/llmkit/: __init__.py  adapter.py  agent.py  audio_speech.py  callbacks.py  chain.py  cli.py  client.py  config.py  document_loaders.py  embeddings.py  error_handling.py  evaluation.py  finetuning.py  graph.py  hybrid_manager.py  inferrer.py  memory.py  ml_models.py  model_info.py  multi_agent.py  output_parsers.py  prompts.py  provider_factory.py  rag_chain.py  rag_debug.py  registry.py  scanner.py  state_graph.py  streaming.py  text_splitters.py  token_counter.py  tools.py  tools_advanced.py  tracer.py  vector_stores_old.py  vision_embeddings.py  vision_loaders.py  vision_rag.py  web_search.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_domain.py  test_e2e.py  test_facade.py  test_infrastructure.py  test_integration.py  test_utils.py
tests/test_domain/: test_embeddings.py  test_embeddings_extended.py  test_loaders.py  test_memory.py  test_prompts.py  test_splitters.py  test_tools.py  test_vector_stores.py  test_vector_stores_implementations.py
tests/test_facade/: test_agent_facade.py  test_audio_facade.py  test_chain_facade.py  test_client_facade.py  test_evaluation_facade.py  test_finetuning_facade.py  test_graph_facade.py  test_multi_agent_facade.py  test_rag_facade.py  test_state_graph_facade.py  test_vision_rag_facade.py  test_web_search_facade.py
tests/test_handler/: __init__.py  test_agent_handler.py  test_audio_handler.py  test_chain_handler.py  test_chat_handler.py  test_evaluation_handler.py  test_finetuning_handler.py  test_graph_handler.py  test_multi_agent_handler.py  test_rag_handler.py  test_state_graph_handler.py  test_vision_rag_handler.py  test_web_search_handler.py
tests/test_infrastructure/: test_hybrid_manager.py  test_parameter_adapter.py  test_provider_factory.py
tests/test_service/: __init__.py  test_agent_service.py  test_audio_service.py  test_chain_service.py  test_chat_service.py  test_evaluation_service.py  test_finetuning_service.py  test_graph_service.py  test_multi_agent_service.py  (+5 more)
(+137 files in other folders)
